<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:inputType="textPersonName"
        android:id="@+id/hoten"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hoten"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:id="@+id/mssv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="70dp"
        android:hint="@string/mssv"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:inputType="date"
        android:id="@+id/ngaysinh"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        android:hint="@string/ngaysinh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <TextView
        android:id="@+id/gioitinh"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="164dp"
        android:text=" Giới tính:"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <EditText
        android:id="@+id/diachi"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="244dp"
        android:hint="Địa chỉ"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:id="@+id/sodienthoai"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="296dp"
        android:hint="@string/sdt"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="340dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <TextView
        android:id="@+id/sothich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="384dp"
        android:text=" Sở thích:"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkthethao"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"

        android:layout_marginTop="412dp"
        android:text="Thể thao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkdulich"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="104dp"

        android:layout_marginTop="412dp"
        android:text="Du lịch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkamnhac"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="412dp"
        android:text="Âm nhạc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/dongydk"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"

        android:layout_marginTop="460dp"
        android:text="Đồng ý điều khoản của ứng dụng"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hienthi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="500dp"
        android:text="Submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>


    <TextView
        android:id="@+id/thongtin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="548dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="310dp"
        android:layout_height="251dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="1dp">

        <RadioButton
            android:id="@+id/radioNam"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="200dp"
            android:checked="false"
            android:text="Nam" />

        <RadioButton
            android:id="@+id/radioNu"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="200dp"

            android:text="Nữ" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>